<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog_title"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog_text"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="15dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_submit"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textColor="@android:color/holo_red_light"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tv_cancel"
            android:text="@string/cancel"
            android:padding="10dp"
            android:textColor="@android:color/black"
            />


    </LinearLayout>

    

</LinearLayout>